# projmag

./: README.md  application.py  pyproject.toml
projmag/: commands.py  directory.py  project.py
tests/: test_directory.py  test_projmag.py
