[tool.poetry]
name = "projmag"
version = "0.1.0"
description = ""
authors = ["Idris Raja <idris.raja@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
debjig = { git = "https://github.com/idrisr/debjig.git", branch='main' }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
